Made some changes (Update, Delete)

--- a/EComm_2112510116/Client/Pages/DataProduk/ManajemenDataKategori.razor
+++ b/EComm_2112510116/Client/Pages/DataProduk/ManajemenDataKategori.razor
@@ -11,7 +11,7 @@
     <thead>
         <tr>
             <th>Kategori</th>
-            <th>Nama Produk</th>
+            <th>Nama Kategori</th>
         </tr>
     </thead>
 
