--- a/EComm_2112510116/Client/Pages/DataProduk/ManajemenDataVarian.razor
+++ b/EComm_2112510116/Client/Pages/DataProduk/ManajemenDataVarian.razor
@@ -12,7 +12,7 @@
     <thead>
         <tr>
             <th>Varian</th>
-            <th>Nama Produk</th>
+            <th>Nama Varian</th>
         </tr>
     </thead>
 
@@ -44,7 +44,7 @@
     {
         NavigationManager.NavigateTo($"manajemen-varian/edit/{id}");
     }
-
+    
     void TambahVarian()
     {
         NavigationManager.NavigateTo("manajemen-varian/tambah");
