Pertemuan 10 - Add Search Product

--- a/EComm_2112510116/Client/_Imports.razor
+++ b/EComm_2112510116/Client/_Imports.razor
@@ -11,3 +11,4 @@
 @using EComm_2112510116.Client.Services.ProdukService
 @using EComm_2112510116.Client.Services.KategoriService
 @using EComm_2112510116.Client.Services.VarianService
+@using Blazored.Typeahead
