--- a/EComm_2112510116/Client/Pages/Index.razor
+++ b/EComm_2112510116/Client/Pages/Index.razor
@@ -1,9 +1,34 @@
 ﻿@page "/"
+@page "/{urlkategori}"
+@inject IKategoriService KategoriService
+<PencarianProduk />
 
-<PageTitle>Index</PageTitle>
+@if (kat != null)
+{
+    <h1>List Produk Kategori @kat.Nama</h1>
+    <ListProduk IdKat="@kat.IdKategori">
+}
+else
+{
+    <h1>Selamat Datang Pada Toko Online 2112510116 :) </h1>
+    </ListProduk>
+}
 
-<h1>Hello, world!</h1>
+@code
+{
+    [Parameter]
+    public string? urlkategori { get; set; }
+    private Kategori? kat = null;
 
-Welcome to your new app.
-
-<SurveyPrompt Title="Hi, I'm Natasha Meiliana :)'" />
+    protected override void OnParametersSet()
+    {
+        if(urlkategori != null)
+        {
+            kat = KategoriService.Kategoris.FirstOrDefault(c => c.Nama == urlkategori);
+        }
+        else
+        {
+            kat = null;
+        }
+    }
+}
