--- a/EComm_2112510116/Client/Shared/NavMenu.razor
+++ b/EComm_2112510116/Client/Shared/NavMenu.razor
@@ -1,4 +1,6 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@inject IKategoriService KategoriService
+
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">EComm_2112510116</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
@@ -39,6 +41,18 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Data Kategori
             </NavLink>
         </div>
+        <li class="dropdown-divider">
+            @foreach (var kat in KategoriService.Kategoris)
+            {
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="@kat.Nama">
+                        <span class="oi oi-book" aria-hidden="true"></span> @kat.Nama
+                    </NavLink>
+
+                </div>
+            }
+
+        </li>
     </nav>
 </div>
 
@@ -50,5 +64,10 @@
     private void ToggleNavMenu()
     {
         collapseNavMenu = !collapseNavMenu;
+    }
+
+    protected override async Task OnInitializedAsync()
+    {
+        await KategoriService.GetAllKategori();
     }
 }
